# dcadmin

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.d.ts  app.html  dcadminTheme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  models.rs
src-tauri/src/auth/: credentials.rs  mod.rs
src-tauri/src/customer/: mod.rs  models.rs
src-tauri/src/events/: mod.rs  models.rs
src-tauri/src/groups/: mod.rs  models.rs
src-tauri/src/permissions/: mod.rs  models.rs
src-tauri/src/users/: mod.rs  models.rs
src/components/: Events.svelte  Login.svelte  NodeBackButton.svelte  NodePermissions.svelte  NodePermissionsView.svelte  NodeView.svelte  Spinner.svelte  UserList.svelte  UserListView.svelte  UserPermissions.svelte  UserPermissionsView.svelte  Welcome.svelte
src/components/groups/: GroupBackButton.svelte  GroupList.svelte  GroupListView.svelte  GroupUserList.svelte
src/components/nodes/: NodeInfoView.svelte  NodeView.svelte
src/components/users/: UserList.svelte  UserListView.svelte  UserPermissions.svelte  UserSearch.svelte
src/lib/: index.ts  models.ts  url.ts
src/lib/auth/: index.ts  models.ts
src/lib/customer/: index.ts  models.ts
src/lib/events/: index.ts  models.ts
src/lib/groups/: index.ts  models.ts
src/lib/permissions/: index.ts  models.ts
src/lib/users/: index.ts  models.ts
src/lib/utils/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/events/: +page.svelte
src/routes/groups/: +page.svelte
src/routes/groups/[id]/: +page.svelte
src/routes/nodes/[id]/: +page.svelte
src/routes/nodes/[id]/permissions/: +page.svelte
src/routes/permissions/: +page.svelte
src/routes/users/: +page.svelte
src/stores/: auth.ts  nodes.ts
