[package]
name = "app"
version = "0.1.1"
description = "DCAdmin - desktop client to manage DRACOON"
authors = ["Octavio Simone"]
license = "https://github.com/unbekanntes-pferd/dcadmin"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.7", features = [ "api-all"] }
dco3 = "0.15"
open = "5"
chrono = "0.4"
keyring = {version = "2" }
csv = "1"
moka = {version = "0.12", features = ["future"] }
dirs = "5"

# tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
